kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sock-ingress
  namespace: sock-shop
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: sock.joggzprop.me
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: front-end
                port:
                  number: 80

    - host: grafana.joggzprop.me
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80

    - host: prometheus.joggzprop.me
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: prometheus-kube-prometheus-prometheus
                port:
                  number: 9090

  tls:
    - hosts:
        - prometheus.joggzprop.me
        - grafana.joggzprop.me
        - sock.joggzprop.me
      secretName: joggzprop-secret
